[package]
name = "take_lock"
version = "0.1.1"
edition = "2024"

license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/nevakrien/take_lock"
categories = ["concurrency"]
documentation = "https://docs.rs/take_lock"

description = "a dead simple lock around Option<Box<T>> thats similar in spirit to OnceLock but adds a bit more flexibility by paying a bit in performance"

[dependencies]
